# XMLParserService

./: .env_example  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
src/api/: lifespan.py  main.py
src/common/: settings.py
src/common/converters/: entity_converters.py
src/domain/entitites/: activities.py  adresses.py  base.py  composer.py  contractors.py
src/infra/alembic/: env.py
src/infra/alembic/versions/: 2860bb8cea1e_created_models.py
src/infra/db/sql/: db.py
src/infra/db/sql/models/: base.py  models.py
src/infra/repos/: activities.py  activities_contractors.py  adresses.py  base.py  contractors.py
src/logic/services/: activity_contractor_service.py  activity_service.py  address_service.py  contractor_service.py  xml_parser.py
src/logic/use_cases/: contractor_activity_address_use_case.py
tests/logic/: conftest.py  test_xml_parser.py
