[project]
name = "xmlparserservice"
version = "0.1.0"
description = ""
authors = [
    {name = "defaultftxuser",email = "banginlord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
