[project]
name = "xmlparserservice"
version = "0.1.0"
description = ""
authors = [
    {name = "defaultftxuser",email = "banginlord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "fastapi[all] (>=0.115.6,<0.116.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mock = "^5.1.0"
pytest-asyncio = "^0.25.2"

